--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "server":"nodemon index.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build":"npm install && npm install --prefix ../frontend && npm run build --prefix ../frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
